--- a/sections/LPS-form-warranty.liquid
+++ b/sections/LPS-form-warranty.liquid
@@ -48,7 +48,7 @@ select {
                 <ul class="mt-2 mb-2" style="list-style-type:disc;">
                     <li>Delamination.</li>
                     <li>Problems with Inserts.</li>
-                    <li>Cracked topsheet (if the woodcore is not broken).</li>
+                    <li>Cracked topsheet (outside of the binding area and if the woodcore is not broken).</li>
                     <li>Split edge from sidewall (if there is no obvious impact on the edge).</li>
                 </ul>
             </div>
