--- a/sections/LPS-form-warranty.liquid
+++ b/sections/LPS-form-warranty.liquid
@@ -191,6 +191,7 @@ select {
                                       <div class="col-6">
                                           <select id="year" name="date_year">
                                               <option value="choose">Year</option>
+                                              <option value="2023">2023</option>
                                               <option value="2022">2022</option>
                                               <option value="2021">2021</option>
                                               <option value="2020">2020</option>
